# most.hs

./: ataka.cabal  biproco.cabal  most.cabal  stack.yaml
test/: Main.hs
