name: ataka
version: 0.1
category: Networking, Serialization
synopsis: Simple and compact cross-platform binary data format
homepage: https://github.com/nikita-volkov/ataka.hs
bug-reports: https://github.com/nikita-volkov/ataka.hs/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2019, Nikita Volkov
license: MIT
license-file: LICENSE
build-type: Simple
cabal-version: >=1.10

source-repository head
  type: git
  location: git://github.com/nikita-volkov/ataka.git

library
  hs-source-dirs: library
  exposed-modules:
    Ataka.Cereal.Get
    Ataka.Cereal.Put
    Ataka.Types
  other-modules:
    Ataka.Prelude
  default-extensions: Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language: Haskell2010
  build-depends:
    base <5,
    bytestring >=0.10.8 && <0.11,
    cereal >=0.5.8.1 && <0.6,
    text >=1.2 && <2,
    vector >=0.12 && <0.13
