name: most
version: 0.1
category: Networking, Serialization
synopsis: Simple and compact cross-platform binary data format
description:
  High-level abstraction
  .
  This package is not there to replace the low-level serialization libraries.
  Instead it's supposed to wrap the best one of them.
homepage: https://github.com/nikita-volkov/most.hs
bug-reports: https://github.com/nikita-volkov/most.hs/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2019, Nikita Volkov
license: MIT
license-file: LICENSE
build-type: Simple
cabal-version: >=1.10

source-repository head
  type: git
  location: git://github.com/nikita-volkov/most.git

library
  hs-source-dirs: library
  exposed-modules:
    Most.Codec
  other-modules:
    Most.Folds
    Most.Prelude
  default-extensions: Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language: Haskell2010
  build-depends:
    base <5,
    bytestring >=0.10.8 && <0.11,
    cereal >=0.5.8.1 && <0.6,
    containers >=0.6 && <0.7,
    deferred-folds >=0.9.10.1 && <0.10,
    foldl >=1.4.5 && <1.5,
    invariant >=0.5.3 && <0.6,
    scientific >=0.3.6.2 && <0.4,
    text >=1.2.4 && <2,
    time >=1.8 && <2,
    vector >=0.12 && <0.13

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  default-extensions: BangPatterns, DeriveDataTypeable, DeriveGeneric, DeriveFunctor, DeriveTraversable, FlexibleContexts, FlexibleInstances, LambdaCase, NoImplicitPrelude, RankNTypes, ScopedTypeVariables, StandaloneDeriving, TypeApplications, TypeFamilies
  default-language: Haskell2010
  main-is: Main.hs
  build-depends:
    most,
    QuickCheck >=2.13 && <3,
    quickcheck-instances >=0.3.22 && <0.4,
    rerebase <2,
    tasty >=1.2.3 && <2,
    tasty-hunit >=0.10.0.2 && <0.11,
    tasty-quickcheck >=0.10.1 && <0.11
